Removed the pictures from resources.

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,7 +1,5 @@
 <RCC>
-    <qresource prefix="/pix">
-        <file>images/palettes/pacman.png</file>
-    </qresource>
+    <qresource prefix="/pix"/>
     <qresource prefix="/bin">
         <file>fonts/patrick-hand/PatrickHand-Regular.ttf</file>
         <file>fonts/neucha/neucha-regular.ttf</file>
