--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,5 +1,4 @@
 <RCC>
-    <qresource prefix="/pix"/>
     <qresource prefix="/bin">
         <file>fonts/neucha/neucha-regular.ttf</file>
     </qresource>
@@ -10,5 +9,11 @@
         <file>audio/effects/notification.wav</file>
         <file>audio/effects/win.wav</file>
         <file>audio/effects/died.wav</file>
+    </qresource>
+    <qresource prefix="/pix">
+        <file>svg/enemy-green.svg</file>
+        <file>svg/enemy-orange.svg</file>
+        <file>svg/enemy-violet.svg</file>
+        <file>svg/enemy-white.svg</file>
     </qresource>
 </RCC>
